First Serious Post

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,14 @@
+
 .current {
 	color: green;
 }
 
+* {
+	max-width: 768px;
+	font-family: Tahoma, Geneva, sans-serif;
+	margin: auto;
+}
+
+nav {
+	text-align: center;
+}
